[tool.poetry]
name = "my-blockchain"
version = "0.1.0"
description = ""
authors = ["Nhat-Minh DOAN"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi_source"
url = "https://pypi.org/simple/"
default = true